--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="header-text">
                 <h3>Java Backend Developer</h3>
                 <h1>Hi, I'm <span>Saurabh</span> <br>Kumar, BackEnd Developer </h1>
+                <a href="img/saurabh-kumar-resume.pdf" download class="btn btn2">RESUME</a>
             </div>
 
         </div>
@@ -56,6 +57,7 @@
                        I am Graduated from Masai School and looking for an opportunity to enhance my skills and building some good 
                        products and A passionate and aspiring full-stack developer.Currently I work on Java BackEnd Development.
                     </p>
+                    
 
                     <div class="tab-titles">
                         <p class="tab-links active-link">Education</p>
@@ -70,6 +72,8 @@
                             <li> <span>10+2 - PCM </span> <br> 2016-2018 </li>
                             
                         </ul>
+
+                        <a href="img/saurabh-kumar-resume.pdf" download class="btn btn2">RESUME</a>
                     </div>
                 </div>
 
